--- a/assets/views/dashboard.pug
+++ b/assets/views/dashboard.pug
@@ -7,6 +7,7 @@ html
     title Terminal (matrix)
     link(rel="stylesheet" href="/css/bootstrap.min.css")
     link(rel="stylesheet" href="/css/bootstrap-theme.min.css")
+    link(rel="stylesheet" href="/css/xterm.css" crossorigin="anonymous")
   body
     .modal.fade#loginModal(tabindex="-1" role="dialog" aria-labelledby="login-modal-label")
       .modal-dialog(role="document")
@@ -60,6 +61,6 @@ html
     script(src="/js/jquery-2.1.4.min.js" defer="defer")
     script(src="/js/bootstrap.min.js" defer="defer")
     script(src="/js/humanize-duration.js" defer="defer")
-    script(src="/js/term.js" defer="defer")
+    script(src="/js/xterm.js" defer="defer")
     script(src="/socket.io/socket.io.js")
     script(src="/dashboard.js" defer="defer")
